--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
+    "php-node": "0.0.2",
     "save": "^2.4.0",
     "sequelize": "^5.21.13"
   }
