--- a/json/projects.json
+++ b/json/projects.json
@@ -17,13 +17,13 @@
 
     },
     {
-        "images": "publicidad.jpg",
+        "images": "pub2.jpg",
         "title": "Diseño publicitario",
         "description": "El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo."
 
     },
     {
-        "images": "publicidad.jpg",
+        "images": "web.jpg",
         "title": "Diseño web",
         "description": "El diseño editorial es imprescindible a la hora de realizar la maquetación y composición de publicaciones como revistas, diarios, libros, discos y afiches para darles coherencia, organización y estilo."
 
