--- a/json/projectsPackaging.json
+++ b/json/projectsPackaging.json
@@ -1,22 +1,9 @@
 [
     {
         "id": 1,
-        "category": "editorial",
-        "images": "/editorial/editorial01.png",
-        "title": "Revista Maison"
-
-    },
-    {
-        "id": 2,
-        "category": "editorial",
-        "images": "/editorial/editorial02.png",
-        "title": "Revista Manifiesto"
-    },
-    {
-        "id": 3,
-        "category": "editorial",
-        "images": "/editorial/editorial03.png",
-        "title": "Colección Cortázar"
+        "category": "packaging",
+        "images": "/packaging/pack01.png",
+        "title": "Leche Silkylatte"
 
     }
 ]
